@@ -20,6 +20,7 @@ PHP                                                                        NEWS
   . Fixed bug #70241 (Skipped assertions affect Generator returns). (Bob)
   . Fixed bug #70239 (Creating a huge array doesn't result in exhausted,
     but segfault). (Laruence, Anatol)
+  . Fixed bug causing exception traces with anon classes to be truncated. (Bob)
 
 - CLI server:
   . Fixed bug #66606 (Sets HTTP_CONTENT_TYPE but not CONTENT_TYPE).
